deploy: 44737c66ad9334463dec9cc0d22d9107339babf9

--- a/content/about/about_us.html
+++ b/content/about/about_us.html
@@ -795,10 +795,11 @@ Somehow, I am still a Lions fan, even though stints in AZ, CA, PA, NY, TX, and F
 <div class="card-body docutils">
 <img alt="mystery" src="../../_images/mystery-person.jpg" />
 <br>
+Linkedin: tbd <br>
 Email: tbd  <br>
 GitHub: tbd  <br> 
 <br>
-I took this class last semester and highly recommend. It's helped me tons with finding a job. Outside of school I like to do yoga, hike, and generally just be outside!
+Personal factoid tbd
 </div>
 </div>
 </div>
