deploy: a8c382dbbacf37f92728f676aa785e4564a9cfdf

--- a/content/about/about_us.html
+++ b/content/about/about_us.html
@@ -789,17 +789,17 @@ Somehow, I am still a Lions fan, even though stints in AZ, CA, PA, NY, TX, and F
 <div class="card w-100 shadow docutils">
 <div class="card-header docutils">
 <p style="font-size:18px; line-height:24px; color:#666666; margin:0 0 10px;">  <!-- makes it like H3 -->
- <b> TA - Mystery!  </b>
+ <b> TA - Julio Veracruz  </b>
 </p>
 </div>
 <div class="card-body docutils">
-<img alt="mystery" src="../../_images/mystery-person.jpg" />
+<img alt="mystery" src="../../_images/julio.jpg" />
 <br>
-Linkedin: tbd <br>
-Email: tbd  <br>
-GitHub: tbd  <br> 
+Personal website: [https://julioveracruz.github.io](https://julioveracruz.github.io) <br>
+Email: juv222  <br>
+GitHub: julioveracruz  <br> 
 <br>
-Personal factoid tbd
+I'm currenty a senior studying finance. Outside of classes, I love watching basketball (let's go Mavs!), listening to music, and trying to nail the perfect cold brew coffee recipe. 
 </div>
 </div>
 </div>
