deploy: fb647fa5c0012b282b429476ed9c44733c3c95c4

--- a/content/about/about_us.html
+++ b/content/about/about_us.html
@@ -795,7 +795,7 @@ Somehow, I am still a Lions fan, even though stints in AZ, CA, PA, NY, TX, and F
 <div class="card-body docutils">
 <img alt="mystery" src="../../_images/julio.jpg" />
 <br>
-Personal website: [https://julioveracruz.github.io](https://julioveracruz.github.io) <br>
+Personal website: [https://julioveracruz.github.io/](https://julioveracruz.github.io/) <br>
 Email: juv222  <br>
 GitHub: julioveracruz  <br> 
 <br>
