deploy: 6d4e7c372da7bd5289b6962f74e11a393f80143c

--- a/handouts/Module 2 Notes.html
+++ b/handouts/Module 2 Notes.html
@@ -805,22 +805,34 @@
 <ul class="simple">
 <li><p>[ ] Numpy</p>
 <ul>
-<li><p>[ ] …</p></li>
+<li><p>[ ] work on numerical operations on large arrays of numbers</p></li>
+<li><p>[ ] produce reproducible random numbers</p></li>
+<li><p>[ ] integrate Numpy functions on Pandas objects</p></li>
 </ul>
 </li>
 <li><p>[ ] Pandas</p>
 <ul>
-<li><p>[ ] …</p></li>
+<li><p>[ ] impose data into dataframes</p></li>
+<li><p>[ ] differentiate between “wide” and “tall” data</p></li>
+<li><p>[ ] loading and saving data</p></li>
+<li><p>[ ] manipulate and reshape data within dataframes</p></li>
+<li><p>[ ] perform numerical and statistical operations on dataframes</p></li>
 </ul>
 </li>
 <li><p>[ ] Data EDA/Wrangling/Cleaning</p>
 <ul>
-<li><p>[ ] …</p></li>
+<li><p>[ ] understand Golden Rules for Exploratory Data Analysis (EDA)</p></li>
+<li><p>[ ] look for possible issues in data and methods to fix</p></li>
+<li><p>[ ] merging dataframes together</p></li>
+<li><p>[ ] dealing with outliers and/or missing data</p></li>
 </ul>
 </li>
 <li><p>[ ] Visualization</p>
 <ul>
-<li><p>[ ] …</p></li>
+<li><p>[ ] create effective visualizations and models for data</p></li>
+<li><p>[ ] determine what plots to use based on data characteristics</p></li>
+<li><p>[ ] syntax for creating and customizing plots</p></li>
+<li><p>[ ] performing EDA on visualizations</p></li>
 </ul>
 </li>
 </ul>
