deploy: 845858be8844e3d8be24eccf9b4d65b67ea27e59

--- a/content/03/04e-visualEDA.html
+++ b/content/03/04e-visualEDA.html
@@ -987,7 +987,7 @@
 <ol class="simple">
 <li><p>If a variable is numerical</p>
 <ol class="simple">
-<li><p>How many variables are missing and is it systematic (like in the example above)?</p></li>
+<li><p>How many observations are missing and is it systematic (like in the example above)?</p></li>
 <li><p>Is it continuous or discrete?</p></li>
 <li><p>What is the shape of a distribution (normal, binary, skewed left, skewed right, fat-tailed, etc.)?</p></li>
 <li><p>How prevalent are outliers?</p></li>
