--- a/content/05/03c1_OOS.html
+++ b/content/05/03c1_OOS.html
@@ -47,8 +47,6 @@
     <script src="../../_static/copybutton.js"></script>
     <script >var togglebuttonSelector = '.toggle, .admonition.dropdown, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script src="../../_static/sphinx-book-theme.d31b09fe5c1d09cb49b26a786de4a05d.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
     <script async="async" src="https://unpkg.com/thebe@0.5.1/lib/index.js"></script>
     <script >
         const thebe_selector = ".thebe"
@@ -809,8 +807,8 @@
 <blockquote>
 <div><ol class="simple">
 <li><p>Create a holdout sample.</p></li>
-<li><p>“Train” many models on a portion of the training sample, and use each to predict <span class="math notranslate nohighlight">\(y\)</span> on the remaining/unused part of the training sample.</p></li>
-<li><p>Repeat step 2 <span class="math notranslate nohighlight">\(k\)</span> times, to see how consistently accurate each model is.</p></li>
+<li><p>“Train” many models on a portion of the training sample, and use each to predict $y$ on the remaining/unused part of the training sample.</p></li>
+<li><p>Repeat step 2 $k$ times, to see how consistently accurate each model is.</p></li>
 <li><p>Pick your preferred model.</p></li>
 <li><p>Apply the preferred model to the holdout sample, but you only get to try this one time.</p></li>
 </ol>
@@ -824,7 +822,7 @@
 <p>So what do we do?</p>
 <div class="admonition-rolling-oos-testing admonition">
 <p class="admonition-title">Rolling OOS testing</p>
-<p>When your problem is a prediction one (focused on <span class="math notranslate nohighlight">\( \hat{y} \)</span>, not <span class="math notranslate nohighlight">\( \beta \)</span> ) <strong>and</strong> the ML model is focused on using X at time <span class="math notranslate nohighlight">\(t\)</span> to predict y at some future date <span class="math notranslate nohighlight">\(t+\Delta\)</span>, use a rolling out-of-sample test.</p>
+<p>When your problem is a prediction one (focused on $ \hat{y} $, not $ \beta $ ) <strong>and</strong> the ML model is focused on using X at time $t$ to predict y at some future date $t+\Delta$, use a rolling out-of-sample test.</p>
 <p><strong>The general idea usually follows this procedure below. Suppose you have 20 years of data.</strong></p>
 <ol class="simple">
 <li><p>The holdout sample will be the last 3 years. (15%)</p></li>
