--- a/content/01/00_Getting_Started.html
+++ b/content/01/00_Getting_Started.html
@@ -47,8 +47,6 @@
     <script src="../../_static/copybutton.js"></script>
     <script >var togglebuttonSelector = '.toggle, .admonition.dropdown, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script src="../../_static/sphinx-book-theme.d31b09fe5c1d09cb49b26a786de4a05d.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
     <script async="async" src="https://unpkg.com/thebe@0.5.1/lib/index.js"></script>
     <script >
         const thebe_selector = ".thebe"
@@ -809,7 +807,7 @@
 <ul class="simple">
 <li><p>Jupyter Notebooks - to write, execute, and share Python code</p></li>
 <li><p>GitHub - to back up work on projects, sync between teammates, and more</p></li>
-<li><p>GitHub Desktop - Git is a <em><strong>version control system</strong></em> and Github Desktop is a “point and click” version of Git designed to work with GitHub, which makes it easier to work on projects hosted on Github (it is annoying that the names are so similar, but Git <span class="math notranslate nohighlight">\(\neq\)</span> GitHub <span class="math notranslate nohighlight">\(\neq\)</span> GitHub Desktop!)</p></li>
+<li><p>GitHub Desktop - Git is a <em><strong>version control system</strong></em> and Github Desktop is a “point and click” version of Git designed to work with GitHub, which makes it easier to work on projects hosted on Github (it is annoying that the names are so similar, but Git $\neq$ GitHub $\neq$ GitHub Desktop!)</p></li>
 <li><p>Skills: Coding (Python specifically, but especially good coding practices), Git habits, GitHub usage</p></li>
 </ul>
 <p>So, that is what this chapter of the book/module in the class is about. It’s about laying the foundation for some cool stuff.</p>
