deploy: daa612ac27fbb80b822e004d846bdcdfe3fe2599

--- a/content/01/02_Setup.html
+++ b/content/01/02_Setup.html
@@ -47,6 +47,8 @@
     <script src="../../_static/copybutton.js"></script>
     <script >var togglebuttonSelector = '.toggle, .admonition.dropdown, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script src="../../_static/sphinx-book-theme.d31b09fe5c1d09cb49b26a786de4a05d.js"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
     <script async="async" src="https://unpkg.com/thebe@0.5.1/lib/index.js"></script>
     <script >
         const thebe_selector = ".thebe"
@@ -876,7 +878,7 @@
 <p class="sidebar-title"></p>
 <div class="tip admonition">
 <p class="admonition-title"><strong>Is this a “fun” fact?</strong></p>
-<p>Git $\neq$ GitHub $\neq$ GitHub Desktop!
+<p>Git <span class="math notranslate nohighlight">\(\neq\)</span> GitHub <span class="math notranslate nohighlight">\(\neq\)</span> GitHub Desktop!
 <img alt="" src="https://media.giphy.com/media/5hs1S7dpRHphppnvm7/source.gif" /></p>
 <p>It is annoying that the names are so similar, but this will make more sense soon, I promise!</p>
 </div>
