--- a/content/03/04d-whichplot.html
+++ b/content/03/04d-whichplot.html
@@ -47,6 +47,8 @@
     <script src="../../_static/copybutton.js"></script>
     <script >var togglebuttonSelector = '.toggle, .admonition.dropdown, .tag_hide_input div.cell_input, .tag_hide-input div.cell_input, .tag_hide_output div.cell_output, .tag_hide-output div.cell_output, .tag_hide_cell.cell, .tag_hide-cell.cell';</script>
     <script src="../../_static/sphinx-book-theme.d31b09fe5c1d09cb49b26a786de4a05d.js"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
     <script async="async" src="https://unpkg.com/thebe@0.5.1/lib/index.js"></script>
     <script >
         const thebe_selector = ".thebe"
@@ -866,7 +868,7 @@ Examining one variable<div class="summary-down docutils">
 <p class="admonition-title">Note</p>
 <p class="card-text">Below, if I call something like <code class="docutils literal notranslate"><span class="pre">df['variable'].&lt;someplottype&gt;</span></code> that means we are using <code class="docutils literal notranslate"><span class="pre">pandas</span></code> built in plotting methods. Else, we call <code class="docutils literal notranslate"><span class="pre">sns</span></code> to use <code class="docutils literal notranslate"><span class="pre">seaborn</span></code>.</p>
 </div>
-<p class="card-text">If the variable is called $x$ in the dataset,</p>
+<p class="card-text">If the variable is called <span class="math notranslate nohighlight">\(x\)</span> in the dataset,</p>
 <table class="colwidths-auto table">
 <thead>
 <tr class="row-odd"><th class="text-align:left head"><p class="card-text">Graph</p></th>
@@ -898,7 +900,7 @@ Examining one variable by group<div class="summary-down docutils">
 <div class="summary-up docutils">
 <svg version="1.1" width="24" height="24" class="octicon octicon-chevron-up" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M18.78 15.28a.75.75 0 000-1.06l-6.25-6.25a.75.75 0 00-1.06 0l-6.25 6.25a.75.75 0 101.06 1.06L12 9.56l5.72 5.72a.75.75 0 001.06 0z"></path></svg></div>
 </summary><div class="summary-content card-body docutils">
-<p class="card-text">If you want to examine $y$ for each group in $group$</p>
+<p class="card-text">If you want to examine <span class="math notranslate nohighlight">\(y\)</span> for each group in <span class="math notranslate nohighlight">\(group\)</span></p>
 <table class="colwidths-auto table">
 <thead>
 <tr class="row-odd"><th class="text-align:left head"><p class="card-text">Graph</p></th>
@@ -985,8 +987,8 @@ Examining two variables by group<div class="summary-down docutils">
 </tr>
 </tbody>
 </table>
-<p class="card-text">You will come across times where you think the relationship between $x$ and $y$ might on a third variable, $z$, or maybe even a fourth variable $w$. For example, age and income are related, but the relationship is different for college educated women than it is for high-school only men.</p>
-<p class="card-text">If you want to examine the relationship of $x$ and $y$ for each group in $group$, you can do so using any two-way plot type (scatter and its cousins).</p>
+<p class="card-text">You will come across times where you think the relationship between <span class="math notranslate nohighlight">\(x\)</span> and <span class="math notranslate nohighlight">\(y\)</span> might on a third variable, <span class="math notranslate nohighlight">\(z\)</span>, or maybe even a fourth variable <span class="math notranslate nohighlight">\(w\)</span>. For example, age and income are related, but the relationship is different for college educated women than it is for high-school only men.</p>
+<p class="card-text">If you want to examine the relationship of <span class="math notranslate nohighlight">\(x\)</span> and <span class="math notranslate nohighlight">\(y\)</span> for each group in <span class="math notranslate nohighlight">\(group\)</span>, you can do so using any two-way plot type (scatter and its cousins).</p>
 <div class="admonition-hue-vs-col admonition">
 <p class="admonition-title">Hue vs Col</p>
 <p class="card-text">Some functions achieve the group analysis with a <code class="docutils literal notranslate"><span class="pre">hue</span></code> argument (give different groups different colors) and some do it with <code class="docutils literal notranslate"><span class="pre">col</span></code> (give different groups different subfigures).</p>
