--- a/lectures/L05_and_06_pandas.slides.html
+++ b/lectures/L05_and_06_pandas.slides.html
@@ -14452,7 +14452,7 @@ slice: [ 6  7  8  9 10]
 <h3 id="Next-class">Next class<a class="anchor-link" href="#Next-class">&#182;</a></h3><p>Will resume the <code>pandas</code> exercises next class, ⭐⭐ during which we will have our first student led demos. ⭐⭐</p>
 <ul>
 <li>920am: Joseph and Fan should solve Q4 (bonus: Q5). </li>
-<li>1045am: Ian and Noah will demo their solutions to Q4 (bonus: Q5).</li>
+<li>1045am: Owen and Noah will demo their solutions to Q4 (bonus: Q5).</li>
 </ul>
 
 </div>
