--- a/lectures/L11_scraping.slides.html
+++ b/lectures/L11_scraping.slides.html
@@ -14193,13 +14193,13 @@ div.jp-OutputPrompt {
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="" alt="https://media.giphy.com/media/CzbiCJTYOzHTW/giphy.gif"></p>
+<p><img src="https://media.giphy.com/media/CzbiCJTYOzHTW/giphy.gif" alt=""></p>
 
 </div>
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><img src="" alt="https://media.giphy.com/media/eCqFYAVjjDksg/giphy.gif"></p>
+<p><img src="https://i.giphy.com/media/eCqFYAVjjDksg/giphy.webp" alt=""></p>
 
 </div>
 </div></section><section>
